--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Laravel CI/CD (Test + Docker Build/Push)
 
 on:
   push:
-    branches: [ main ]  # Adjust to your main branch
+    branches: [ main ]
 
 jobs:
   test-and-build:
@@ -21,18 +21,20 @@ jobs:
           php-version: 8.3
 
       - name: Install PHP dependencies
+        working-directory: ./laravel
         run: |
           composer install --no-interaction --prefer-dist
           php artisan key:generate
 
       - name: Run Laravel tests
+        working-directory: ./laravel
         run: php artisan test
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/e-ticket-backend.
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/e-ticket-backend
 
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/e-ticket-backend
