--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/e-ticket-backend
+        run: docker build . --file Dockerfile --tag ${{ secrets.DOCKER_USERNAME }}/e-ticket-backend
 
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/e-ticket-backend
