--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,11 +30,14 @@ jobs:
         working-directory: ./laravel
         run: php artisan test
 
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+- name: Log in to Docker Hub
+  run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build Docker image
-        run: docker buildx build --platform linux/amd64 -t ${{ secrets.DOCKER_USERNAME }}/e-ticket-backend:latest .
-        
-      - name: Push Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/e-ticket-backend
+- name: Build and push Docker image
+  run: |
+    docker buildx build --platform linux/amd64 \
+      -f backend/laravel/Dockerfile \
+      -t ${{ secrets.DOCKER_USERNAME }}/e-ticket-backend:latest \
+      --push \
+      backend/laravel
+
