--- a/laravel/.env
+++ b/laravel/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:/01GLZ+SG3THjCVFC/GQ944GQ6hh+rH654+2TBNOkSw=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -20,7 +20,8 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql__db
+DB_HOST=127.0.0.1
+
 DB_PORT=3306
 DB_DATABASE=transport_db
 DB_USERNAME=root
