--- a/laravel/.env
+++ b/laravel/.env
@@ -20,7 +20,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql__db
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=transport_db
 DB_USERNAME=root
