--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
-name: Laravel CI/CD (Test + Docker Build/Push)
+name: Laravel CI / CD (Test + Docker Build/Push)
 
 on:
   push:
-    branches: [ main ]
+    branches: main 
 
 jobs:
   test-and-build:
@@ -14,6 +14,7 @@ jobs:
 
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
+
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
@@ -29,14 +30,13 @@ jobs:
         working-directory: ./laravel
         run: php artisan test
 
-- name: Log in to Docker Hub
-  run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-- name: Build and push Docker image
-  run: |
-    docker buildx build --platform linux/amd64 \
-      -f backend/laravel/Dockerfile \
-      -t ${{ secrets.DOCKER_USERNAME }}/e-ticket-backend:latest \
-      --push \
-      backend/laravel
-
+      - name: Build and push Docker image
+        run: |
+          docker buildx build --platform linux/amd64 \
+            -f backend/laravel/Dockerfile \
+            -t ${{ secrets.DOCKER_USERNAME }}/e-ticket-backend:latest \
+            --push \
+            backend/laravel
