--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,11 +32,10 @@ jobs:
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
       - name: Build and push Docker image
         run: |
           docker buildx build --platform linux/amd64 \
-            -f backend/laravel/Dockerfile \
+            -f ./laravel/Dockerfile \
             -t ${{ secrets.DOCKER_USERNAME }}/e-ticket-backend:latest \
             --push \
-        ./laravel
+            ./laravel
